--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <header class="site-header">
+  <h1 class="visually-hidden">Dental Practice</h1>
+
+  <header class="site-header site-header--nojs">
     <div class="site-header__container container">
 
       <div class="site-header__tel-box">
@@ -19,7 +21,7 @@
       </div>
 
       <a class="logo" href="index.html">
-        <img class="logo__img" src="img/logo1.svg" alt="site logo" width="103" height="56px">
+        <img class="logo__img" src="optimized-imgs/logo1.svg" alt="site logo" width="103" height="56px">
       </a>
 
       <div class="site-header__time-box">
@@ -34,7 +36,7 @@
     <div class="site-header__menu">
 
       <a class="site-header__menu-logo" href="index.html">
-        <img class="site-header__mlogo-img" src="img/logo2.svg" alt="site logo" width="140" height="21px">
+        <img class="site-header__mlogo-img" src="optimized-imgs/logo2.svg" alt="site logo" width="140" height="21px">
       </a>
 
       <button class="site-header__toggler" type="button" aria-label="Menu button"></button>
@@ -42,58 +44,133 @@
       <nav class="site-header__sitenav sitenav">
         <ul class="sitenav__list">
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">Services</a>
+            <a class="sitenav__link" href="services.html">Services</a>
           </li>
 
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">Adventages</a>
+            <a class="sitenav__link" href="adventages.html">Adventages</a>
           </li>
 
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">Team</a>
+            <a class="sitenav__link" href="team.html">Team</a>
           </li>
 
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">Reviews</a>
+            <a class="sitenav__link" href="reviews.html">Reviews</a>
           </li>
 
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">Contacts</a>
+            <a class="sitenav__link" href="contact.html">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <ul class="site-header__social-list">
         <li class="site-header__social-item">
-          <a class="site-header__social-link" target="_blank" href="vk.com">
-            <img src="img/vk.svg" alt="v kontakte" width="28" height="28">
-          </a>
+          <a class="site-header__social-link site-header__social-link--vk" target="_blank" href="vk.com" aria-label="v kontakte"></a>
         </li>
         <li class="site-header__social-item">
-          <a class="site-header__social-link" target="_blank" href="instagram.com">
-            <img src="img/instagram.svg" alt="instagram" width="16" height="16">
-          </a>
+          <a class="site-header__social-link site-header__social-link--insta" target="_blank" href="instagram.com" aria-label="instagram"></a>
         </li>
         <li class="site-header__social-item">
-          <a class="site-header__social-link" target="_blank" href="twitter.com">
-            <img src="img/twitter.svg" alt="twitter" width="18" height="18">
-          </a>
+          <a class="site-header__social-link site-header__social-link--twitter" target="_blank" href="twitter.com" aria-label="twitter"></a>
         </li>
       </ul>
 
     </div>
   </header>
 
+  <main class="main-content">
+
+    <section class="hero">
+      <div class="hero__container container">
+        <div class="hero__btn-box">
+          <button class="hero__btn hero__btn--back" type="button" aria-label="back"></button>
+          <button class="hero__btn hero__btn--next" type="button" aria-label="next"></button>
+        </div>
+      </div>
+
+      <ul class="hero__list">
+        <li class="hero__item">
+          <picture>
+            <source media="(max-width:375px)" type="image/webp" srcset="optimized-imgs/smiling-girl-375-webp.webp 1x, optimized-imgs/smiling-girl-375-webp@2x.webp 2x">
+            <source media="(max-width:375px)" type="image/png" srcset="optimized-imgs/smiling-girl-375-png.png 1x, optimized-imgs/smiling-girl-375-png@2x.png 2x">
+
+            <source media="(max-width:1025px)" type="image/webp" srcset="optimized-imgs/smiling-girl-webp-1024.webp 1x, optimized-imgs/smiling-girl-webp-1024@2x.webp 2x">
+            <source media="(max-width:1025px)" type="image/png" srcset="optimized-imgs/smiling-girl-png-1024.png 1x, optimized-imgs/smiling-girl-png-1024@2x.png 2x">
+
+            <source type="image/webp" srcset="optimized-imgs/smiling-girl-webp.webp 1x, optimized-imgs/smiling-girl-webp@2x.webp 2x">
+            <source type="image/png" srcset="optimized-imgs/smiling-girl-png.png 1x, optimized-imgs/smiling-girl-png@2x.png 2x">
+            <img class="hero__bg-img" src="optimized-imgs/smiling-girl-jpg.jpg" alt="Girl is smiling" width="1920" height="900" srcset="optimized-imgs/smiling-girl-jpg.jpg 1x, optimized-imgs/smiling-girl-jpg@2x.jpg 2x">
+          </picture>
+
+          <div class="hero__container container">
+            <div class="hero__content-box">
+              <p class="hero__text">Modern technology and expert-class dentists</p>
+              <h2 class="hero__heading">get a brilliant smile for every day</h2>
+              <a class="hero__link" href="get.html">get</a>
+            </div>
+          </div>
+        </li>
+
+        <li class="hero__item hero__item-next">
+          <picture>
+            <source media="(max-width:375px)" type="image/webp" srcset="optimized-imgs/smiling-girl-375-webp.webp 1x, optimized-imgs/smiling-girl-375-webp@2x.webp 2x">
+            <source media="(max-width:375px)" type="image/png" srcset="optimized-imgs/smiling-girl-375-png.png 1x, optimized-imgs/smiling-girl-375-png@2x.png 2x">
+
+            <source media="(max-width:1025px)" type="image/webp" srcset="optimized-imgs/smiling-girl-webp-1024.webp 1x, optimized-imgs/smiling-girl-webp-1024@2x.webp 2x">
+            <source media="(max-width:1025px)" type="image/png" srcset="optimized-imgs/smiling-girl-png-1024.png 1x, optimized-imgs/smiling-girl-png-1024@2x.png 2x">
+
+            <source type="image/webp" srcset="optimized-imgs/smiling-girl-webp.webp 1x, optimized-imgs/smiling-girl-webp@2x.webp 2x">
+            <source type="image/png" srcset="optimized-imgs/smiling-girl-png.png 1x, optimized-imgs/smiling-girl-png@2x.png 2x">
+            <img class="hero__bg-img" src="optimized-imgs/smiling-girl-jpg.jpg" alt="Girl is smiling" width="1920" height="900" srcset="optimized-imgs/smiling-girl-jpg.jpg 1x, optimized-imgs/smiling-girl-jpg@2x.jpg 2x">
+          </picture>
+
+          <div class="hero__container container">
+            <div class="hero__content-box">
+              <p class="hero__text">Modern technology and expert-class dentists</p>
+              <h2 class="hero__heading">get a brilliant smile for every day</h2>
+              <a class="hero__link" href="get.html">get</a>
+            </div>
+          </div>
+        </li>
+
+        <li class="hero__item hero__item-next">
+          <picture>
+            <source media="(max-width:375px)" type="image/webp" srcset="optimized-imgs/smiling-girl-375-webp.webp 1x, optimized-imgs/smiling-girl-375-webp@2x.webp 2x">
+            <source media="(max-width:375px)" type="image/png" srcset="optimized-imgs/smiling-girl-375-png.png 1x, optimized-imgs/smiling-girl-375-png@2x.png 2x">
+
+            <source media="(max-width:1025px)" type="image/webp" srcset="optimized-imgs/smiling-girl-webp-1024.webp 1x, optimized-imgs/smiling-girl-webp-1024@2x.webp 2x">
+            <source media="(max-width:1025px)" type="image/png" srcset="optimized-imgs/smiling-girl-png-1024.png 1x, optimized-imgs/smiling-girl-png-1024@2x.png 2x">
+
+            <source type="image/webp" srcset="optimized-imgs/smiling-girl-webp.webp 1x, optimized-imgs/smiling-girl-webp@2x.webp 2x">
+            <source type="image/png" srcset="optimized-imgs/smiling-girl-png.png 1x, optimized-imgs/smiling-girl-png@2x.png 2x">
+            <img class="hero__bg-img" src="optimized-imgs/smiling-girl-jpg.jpg" alt="Girl is smiling" width="1920" height="900" srcset="optimized-imgs/smiling-girl-jpg.jpg 1x, optimized-imgs/smiling-girl-jpg@2x.jpg 2x">
+          </picture>
+
+          <div class="hero__container container">
+            <div class="hero__content-box">
+              <p class="hero__text">Modern technology and expert-class dentists</p>
+              <h2 class="hero__heading">get a brilliant smile for every day</h2>
+              <a class="hero__link" href="get.html">get</a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+  </main>
 
 
-  <script>
+
+  <!-- <script>
     let siteHeader = document .querySelector('.site-header');
     let siteToggler = siteHeader .querySelector('.site-header__toggler');
 
     siteToggler .addEventListener('click', function() {
       siteHeader.classList.toggle('site-header--open')
     });
-  </script>
+  </script> -->
 
 </body>
 </html>
