Finished the feedback side with responsiveness

--- a/index.html
+++ b/index.html
@@ -190,6 +190,38 @@
       </div>
     </section>
 
+    <section class="feedback">
+      <div class="feedback__container container">
+
+        <div class="feedback__content-box">
+          <h2 class="feedback__heading">Reviews from our patients</h2>
+          <h2 class="feedback__heading feedback__heading--none">Last review from our customer</h2>
+          <p class="feedback__text">Here are the latest reviews from our regular customers. You can also leave your review by clicking on the link below</p>
+        </div>
+
+        <ul class="feedback__list">
+          <li class="feedback__item">
+            <h3 class="feedback__list-heading">Ivanov Ivan</h3>
+            <p class="feedback__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            <img class="feedback__list-img" src="optimized-imgs/dark-boy.png" alt="Boy with dark hair is smiling" width="354" height="240" srcset="optimized-imgs/dark-boy.png 1x, optimized-imgs/dark-boy@2x.png 2x">
+          </li>
+          <li class="feedback__item feedback__item-none">
+            <h3 class="feedback__list-heading">Vasilisova Vasilisa</h3>
+            <p class="feedback__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            <img class="feedback__list-img" src="optimized-imgs/light-boy.png" alt="Boy with dark-yellow hair is smiling" width="354" height="240" srcset="optimized-imgs/light-boy.png 1x, optimized-imgs/light-boy@2x.png 2x">
+          </li>
+          <li class="feedback__item feedback__item-none">
+            <h3 class="feedback__list-heading">Ivanov Ivan</h3>
+            <p class="feedback__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            <img class="feedback__list-img" src="optimized-imgs/light-boy.png" alt="Boy with dark-yellow hair is smiling" width="354" height="240" srcset="optimized-imgs/light-boy.png 1x, optimized-imgs/light-boy@2x.png 2x">
+          </li>
+        </ul>
+
+        <a class="feedback__btn" href="feedback.html">Give feedback</a>
+
+      </div>
+    </section>
+
     <section class="location">
       <div class="location__container container">
 
