Finished the Team side with responsiveness

--- a/index.html
+++ b/index.html
@@ -190,6 +190,48 @@
       </div>
     </section>
 
+    <section class="team">
+      <div class="team__container container">
+
+        <button class="team__btn team__btn--back"></button>
+        <button class="team__btn team__btn--next"></button>
+
+        <div class="team__content-box">
+          <h2 class="team__heading">Professional team</h2>
+          <p class="team__text">Dental Practice employs orthodontists and orthopedists, surgeons and therapists, as well as children's dentists. All 13 dentists of our center are highly qualified specialists with extensive experience.</p>
+        </div>
+
+        <ul class="team__list" aria-label="List of professional dentists">
+          <li class="team__item">
+            <h3 class="team__list-heading">Anna Petrova</h3>
+            <p class="team__list-text">Expert-class dentist</p>
+            <img class="team__list-img" src="optimized-imgs/girl-with-mask.jpg" alt="Dentist girl is smiling" width="300" height="350" srcset="optimized-imgs/girl-with-mask.jpg 1x, optimized-imgs/girl-with-mask@2x.jpg 2x">
+          </li>
+          <li class="team__item">
+            <h3 class="team__list-heading">Ivan Ivanov</h3>
+            <p class="team__list-text">Expert-class dentist</p>
+            <img class="team__list-img" src="optimized-imgs/dentist-boy.jpg" alt="Dentist boy is smiling" width="300" height="350" srcset="optimized-imgs/dentist-boy.jpg 1x, optimized-imgs/dentist-boy@2x.jpg 2x">
+          </li>
+          <li class="team__item">
+            <h3 class="team__list-heading">Larisa Vasileva</h3>
+            <p class="team__list-text">Expert-class dentist</p>
+            <img class="team__list-img" src="optimized-imgs/light-dentist.jpg" alt="Dentist girl is smiling" width="300" height="350" srcset="optimized-imgs/light-dentist.jpg 1x, optimized-imgs/light-dentist@2x.jpg 2x">
+          </li>
+          <li class="team__item team__item--none">
+            <h3 class="team__list-heading">Anna Petrova</h3>
+            <p class="team__list-text">Expert-class dentist</p>
+            <img class="team__list-img" src="optimized-imgs/light-dentist.jpg" alt="Dentist girl is smiling" width="300" height="350" srcset="optimized-imgs/light-dentist.jpg 1x, optimized-imgs/light-dentist@2x.jpg 2x">
+          </li>
+          <li class="team__item team__item--none">
+            <h3 class="team__list-heading">Anna Petrova</h3>
+            <p class="team__list-text">Expert-class dentist</p>
+            <img class="team__list-img" src="optimized-imgs/light-dentist.jpg" alt="Dentist girl is smiling" width="300" height="350" srcset="optimized-imgs/light-dentist.jpg 1x, optimized-imgs/light-dentist@2x.jpg 2x">
+          </li>
+        </ul>
+
+      </div>
+    </section>
+
     <section class="feedback">
       <div class="feedback__container container">
 
@@ -203,17 +245,17 @@
           <li class="feedback__item">
             <h3 class="feedback__list-heading">Ivanov Ivan</h3>
             <p class="feedback__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <img class="feedback__list-img" src="optimized-imgs/dark-boy.png" alt="Boy with dark hair is smiling" width="354" height="240" srcset="optimized-imgs/dark-boy.png 1x, optimized-imgs/dark-boy@2x.png 2x">
+            <img class="feedback__list-img" src="optimized-imgs/dark-boy.jpg" alt="Boy with dark hair is smiling" width="354" height="240" srcset="optimized-imgs/dark-boy.jpg 1x, optimized-imgs/dark-boy@2x.jpg 2x">
           </li>
           <li class="feedback__item feedback__item-none">
             <h3 class="feedback__list-heading">Vasilisova Vasilisa</h3>
             <p class="feedback__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <img class="feedback__list-img" src="optimized-imgs/light-boy.png" alt="Boy with dark-yellow hair is smiling" width="354" height="240" srcset="optimized-imgs/light-boy.png 1x, optimized-imgs/light-boy@2x.png 2x">
+            <img class="feedback__list-img" src="optimized-imgs/light-boy.jpg" alt="Boy with dark-yellow hair is smiling" width="354" height="240" srcset="optimized-imgs/light-boy.jpg 1x, optimized-imgs/light-boy@2x.jpg 2x">
           </li>
           <li class="feedback__item feedback__item-none">
             <h3 class="feedback__list-heading">Ivanov Ivan</h3>
             <p class="feedback__list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-            <img class="feedback__list-img" src="optimized-imgs/light-boy.png" alt="Boy with dark-yellow hair is smiling" width="354" height="240" srcset="optimized-imgs/light-boy.png 1x, optimized-imgs/light-boy@2x.png 2x">
+            <img class="feedback__list-img" src="optimized-imgs/light-boy.jpg" alt="Boy with dark-yellow hair is smiling" width="354" height="240" srcset="optimized-imgs/light-boy.jpg 1x, optimized-imgs/light-boy@2x.jpg 2x">
           </li>
         </ul>
 
