Finished the Services side with responsiveness

--- a/index.html
+++ b/index.html
@@ -190,11 +190,60 @@
       </div>
     </section>
 
+    <section class="services">
+      <div class="services__container container">
+
+        <div class="services__content-box">
+          <h2 class="services__heading">Services</h2>
+          <p class="services__text">We provide a wide range of services from treatment to prosthetics. Therefore, you do not need to go anywhere else.</p>
+        </div>
+
+        <button class="services__btn services__btn--back" aria-label="Back"></button>
+        <button class="services__btn services__btn--next" aria-label="Next"></button>
+
+        <ul class="services__list">
+          <li class="services__item">
+            <h3 class="services__list-heading services__list-heading--dental">Dental treatment</h3>
+            <img class="services__list-img" src="optimized-imgs/rub5000.png" alt="not 5000 ruble" width="45" height="16" srcset="optimized-imgs/rub5000.png 1x, optimized-imgs/rub5000@2x.png 2x">
+            <p class="services__list-text">3100₽</p>
+          </li>
+          <li class="services__item">
+            <h3 class="services__list-heading services__list-heading--hygiene">Hygiene</h3>
+            <img class="services__list-img" src="optimized-imgs/rub6000.png" alt="not 6000 ruble" width="45" height="16" srcset="optimized-imgs/rub6000.png 1x, optimized-imgs/rub6000@2x.png 2x">
+            <p class="services__list-text">4600₽</p>
+          </li>
+          <li class="services__item">
+            <h3 class="services__list-heading services__list-heading--diagnostics">Diagnostics</h3>
+            <img class="services__list-img" src="optimized-imgs/rub1000.png" alt="not 1000 ruble" width="45" height="16" srcset="optimized-imgs/rub1000.png 1x, optimized-imgs/rub1000@2x.png 2x">
+            <p class="services__list-text">FREE</p>
+          </li>
+          <li class="services__item">
+            <h3 class="services__list-heading services__list-heading--chdentist">Children’s dentistry</h3>
+            <img class="services__list-img" src="optimized-imgs/rub5000.png" alt="not 5000 ruble" width="45" height="16" srcset="optimized-imgs/rub5000.png 1x, optimized-imgs/rub5000@2x.png 2x">
+            <p class="services__list-text">3100₽</p>
+          </li>
+          <li class="services__item services__item--none">
+            <h3 class="services__list-heading services__list-heading--hygiene">Dental treatment</h3>
+            <img class="services__list-img" src="optimized-imgs/rub5000.png" alt="not 5000 ruble" width="45" height="16" srcset="optimized-imgs/rub5000.png 1x, optimized-imgs/rub5000@2x.png 2x">
+            <p class="services__list-text">3100₽</p>
+          </li>
+          <li class="services__item services__item--none">
+            <h3 class="services__list-heading services__list-heading--dental">Dental treatment</h3>
+            <img class="services__list-img" src="optimized-imgs/rub5000.png" alt="not 5000 ruble" width="45" height="16" srcset="optimized-imgs/rub5000.png 1x, optimized-imgs/rub5000@2x.png 2x">
+            <p class="services__list-text">3100₽</p>
+          </li>
+        </ul>
+
+
+
+      </div>
+    </section>
+
     <section class="team">
       <div class="team__container container">
 
-        <button class="team__btn team__btn--back"></button>
-        <button class="team__btn team__btn--next"></button>
+        <button class="team__btn team__btn--back" aria-label="Back"></button>
+        <button class="team__btn team__btn--next" aria-label="Next"></button>
 
         <div class="team__content-box">
           <h2 class="team__heading">Professional team</h2>
