--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@
             <img class="services__list-img" src="optimized-imgs/rub5000.png" alt="not 5000 ruble" width="45" height="16" srcset="optimized-imgs/rub5000.png 1x, optimized-imgs/rub5000@2x.png 2x">
             <p class="services__list-text">3100₽</p>
           </li>
-          <li class="services__item">
+          <li class="services__item services__item--hygiene">
             <h3 class="services__list-heading services__list-heading--hygiene">Hygiene</h3>
             <img class="services__list-img" src="optimized-imgs/rub6000.png" alt="not 6000 ruble" width="45" height="16" srcset="optimized-imgs/rub6000.png 1x, optimized-imgs/rub6000@2x.png 2x">
             <p class="services__list-text">4600₽</p>
           </li>
-          <li class="services__item">
+          <li class="services__item services__item--diagnostics">
             <h3 class="services__list-heading services__list-heading--diagnostics">Diagnostics</h3>
             <img class="services__list-img" src="optimized-imgs/rub1000.png" alt="not 1000 ruble" width="45" height="16" srcset="optimized-imgs/rub1000.png 1x, optimized-imgs/rub1000@2x.png 2x">
             <p class="services__list-text">FREE</p>
           </li>
-          <li class="services__item">
+          <li class="services__item services__item--chdentist">
             <h3 class="services__list-heading services__list-heading--chdentist">Children’s dentistry</h3>
             <img class="services__list-img" src="optimized-imgs/rub5000.png" alt="not 5000 ruble" width="45" height="16" srcset="optimized-imgs/rub5000.png 1x, optimized-imgs/rub5000@2x.png 2x">
             <p class="services__list-text">3100₽</p>
