solved mini problems

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <a class="logo" href="index.html">
-        <img class="logo__img" src="optimized-imgs/logo1.svg" alt="site logo" width="103" height="56px">
+        <img class="logo__img" src="optimized-imgs/logo1.svg" alt="site logo" width="103" height="56">
       </a>
 
       <div class="site-header__time-box">
@@ -36,7 +36,7 @@
     <div class="site-header__menu">
 
       <a class="site-header__menu-logo" href="index.html">
-        <img class="site-header__mlogo-img" src="optimized-imgs/logo2.svg" alt="site logo" width="140" height="21px">
+        <img class="site-header__mlogo-img" src="optimized-imgs/logo2.svg" alt="site logo" width="140" height="21">
       </a>
 
       <button class="site-header__toggler" type="button" aria-label="Menu button"></button>
@@ -175,7 +175,7 @@
 
         <form class="appointment__form" action="https://echo.htmlacademy.ru" method="POST">
           <h3 class="appointment__form-heading">Appointment</h3>
-          <input class="appointment__input" type="name" name="name" aria-label="Name" placeholder="Name" required>
+          <input class="appointment__input" type="text" name="name" aria-label="Name" placeholder="Name" required>
           <input class="appointment__input" type="tel" name="phone_number" aria-label="Phone number" placeholder="Phone" pattern="^(?:(?:\(?(?:00|\+)([1-4]\d\d|[1-9]\d?)\)?)?[\-\.\ \\\/]?)?((?:\(?\d{1,}\)?[\-\.\ \\\/]?){0,})(?:[\-\.\ \\\/]?(?:#|ext\.?|extension|x)[\-\.\ \\\/]?(\d+))?$" required>
 
           <button class="appointment__btn" type="submit">Appointment</button>
@@ -318,7 +318,7 @@
 
           <form class="location__form" action="https://echo.htmlacademy.ru" method="POST">
             <h3 class="location__form-heading">Appointment</h3>
-            <input class="location__input" type="name" name="name" aria-label="Name" placeholder="Name" required>
+            <input class="location__input" type="text" name="name" aria-label="Name" placeholder="Name" required>
             <input class="location__input" type="tel" name="phone_number" aria-label="Phone number" placeholder="Phone" pattern="^(?:(?:\(?(?:00|\+)([1-4]\d\d|[1-9]\d?)\)?)?[\-\.\ \\\/]?)?((?:\(?\d{1,}\)?[\-\.\ \\\/]?){0,})(?:[\-\.\ \\\/]?(?:#|ext\.?|extension|x)[\-\.\ \\\/]?(\d+))?$" required>
 
             <button class="location__btn" type="submit">Appointment</button>
