Mini changes in code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h1 class="visually-hidden">Dental Practice</h1>
 
-  <header class="site-header site-header--nojs">
+  <header class="site-header">
     <div class="site-header__container container">
 
       <div class="site-header__tel-box">
@@ -347,14 +347,14 @@
 
 
 
-  <!-- <script>
+  <script>
     let siteHeader = document .querySelector('.site-header');
     let siteToggler = siteHeader .querySelector('.site-header__toggler');
 
     siteToggler .addEventListener('click', function() {
       siteHeader.classList.toggle('site-header--open')
     });
-  </script> -->
+  </script>
 
 </body>
 </html>
